sec:Ergebnisse - Deskriptiv AAS Sicher Vs unsicher

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -44,7 +44,7 @@ Für die Erfassung des Bindungsstils (\textit{engl. attachment}) wurde der von \
 
 Der AAS Fragebogen besteht aus insgesamt 18 Items, die auf einer fünfstufigen Likert-Skala von \enquote{stimmt gar nicht} (1), \enquote{stimmt eher nicht} (2), \enquote{stimmt teils / teils} (3), \enquote{stimmt eher} (4) bis \enquote{stimmt genau} (5) eingeschätzt werden. Dabei werden die Skalenwerte als Summenwerte der Itemantworten jeder Skala berechnet. Der Fragebogen bezieht sich auf bindungsrelevante Einstellungen der Befragten und wird mit drei Bindungsskalen erhoben: Die Skala \textit{Nähe} (1) beschreibt das Ausmass, in dem sich eine Person mit Nähe wohl fühlt und diese Nähe nicht mit übermässigen Ängsten verbindet. Die Skala \textit{Vertrauen} (2) beschreibt das Ausmass, in dem eine Person darauf vertraut, dass andere für sie verfügbar sind und dass die Person sich diesen anderen gegebenenfalls tatsächlich anvertrauen kann. Die Skala \textit{Angst} (3) beschreibt in erster Linie Ängste, allein gelassen oder verlassen zu werden. Was sich in einem übermässigen Bedürfnis nach Nähe aus, oder in Befürchtungen, der andere würde diese Bedürnisse zurückweisen. 
 
-Gemäss der Prüfung der Faktorenstruktur des AAS durch \citeA{Schmidt2004} wurden die Elemente 2 und 9 auf Basis der inhaltlichen Ambivalenz der Itemformulierung und der Ergebnisse der konfirmatorischen Faktorenanalyse eliminiert. Diese Reduktion führte zu einer fünf-Item-Version der Skala Nähe und Angst. Die dadurch erhaltene interne Konsistenz (Reliabilität) erreichte in der Untersuchung von \citeA{Schmidt2004} ein $\alpha$ von 0,80 für die Skala Nähe, ein $\alpha$ von 0,72 für die Skala Vertauen und ein $\alpha$ von 0,78 für die Skala Angst. Somit lieferte die überarbeitete Version gemäss \citeA{Buehner2011} niedrige bis mittlere Werte und sind somit zufriedenstellend (Endgültige Version siehe Anhang \ref{app:AAS}).
+Gemäss der Prüfung der Faktorenstruktur des AAS durch \citeA{Schmidt2004} wurden die Elemente 2 und 9 auf Basis der inhaltlichen Ambivalenz der Itemformulierung und der Ergebnisse der konfirmatorischen Faktorenanalyse eliminiert. Diese Reduktion führte zu einer fünf-Item-Version der Skala Nähe und Angst. Die dadurch erhaltene interne Konsistenz (Cronbachs $\alpha$) erreichte in der Untersuchung von \citeA{Schmidt2004} ein $\alpha$ von 0,80 für die Skala Nähe, ein $\alpha$ von 0,72 für die Skala Vertauen und ein $\alpha$ von 0,78 für die Skala Angst. Somit lieferte die überarbeitete Version gemäss \citeA{Buehner2011} niedrige bis mittlere Werte und sind somit zufriedenstellend (Endgültige Fragebogen-Version siehe Anhang \ref{app:AAS}).
 
 Die Operationalisiserung erfolgte anhand der Indizes für die drei Skalen Nähe, Vertrauen und Angst (siehe Formel \ref{eq:IndexNähe}, \ref{eq:IndexVertrauen}, \ref{eq:IndexAngst}). Dabei wurden die Mittelwerte aus den Skalenzugehörigen Items anhand des Likertskalenwerts 1 bis 5 jeder Person berechnet. Zu beachten ist, dass alle Items in der Skala Nähe und die Items $AAS_{5}$, $AAS_{10}$, $AAS_{15}$ und $AAS_{17}$ der Skala Vertrauen für die Erstellung des Skalenwerts umkodiert werden müssen (im Anhang \ref{app:AAS} mit einem * gekennzeichnet). Je höher die Mittelwerte der Skalen, desto grösser die entsprechende Ausprägung. Tendenziell heisst das bei der Skala Nähe, dass Menschen mit einem hohen Wert, sich bei Nähe zu anderen Menschen eher wohl fühlen. Hohe Ausprägungen bei der Skala Vertrauen geht tendenziell mit einem grösseren Vertrauen anderen Menschen gegenüber einher. Je höher die Werte der Skala Angst, desto eher fürchtet sich ein Mensch alleine gelassen zu werden.
 %Formel
@@ -67,14 +67,37 @@ Bezügliche einer besseren Interpretier- und Lesbarkeit können die oben beschri
 
 Dem Mittelwert der zu tranformierenden Formel, die einen Skalenrange von 1 bis 5 hat, wird durch Subtraktion von 1 eine lineare Transformation zu einem Wertebereich 1 bis 4 vorgenommen. Mittels Division durch 4 und anschliessender Multiplikation mit 100 wird eine weitere lineare Transformation zu einem Wertebereich von 0 bis 100 vorgenommen.
 
-Wie bereits oben beschrieben, lassen sich gemäss \citeA{Schmidt2004} mit dem deutschen Instrument die Bindungsstile nicht direkt zuordnen, sondern in zugrunde liegende Dimensionen einteilen \cite{Schuetzmann2004}. Anhand den Ausprägungen der Probanden in den drei Skalen lassen sich drei Cluster definieren: Im Cluster \textit{sicher} sind Probanden mit hohen Werten bei den Skalen Nähe und Vertrauen und niedrige Werte bei der Skala Angst enthalten. Das Cluster \textit{ängstlich} beinhaltet Probanden mit hohen Werten bei der Skala Angst und mittlere Werte bei den Skalen Nähe und Vertrauen. Im dritten Cluster \textit{vermeidend} befinden sich Probanden, die auf allen drei Skalen Nähe, Vertrauen und Angst tiefe Werte aufweisen.
+Wie bereits oben beschrieben, lassen sich gemäss \citeA{Schmidt2004} mit dem deutschen Instrument die Bindungsstile nicht direkt zuordnen, sondern in zugrunde liegende Dimensionen (Cluster) einteilen \cite{Schuetzmann2004}. Anhand den Ausprägungen der Probanden in den drei Skalen lassen sich drei Cluster definieren: Im Cluster \textit{sicher} sind Probanden mit hohen Werten bei den Skalen Nähe und Vertrauen und niedrige Werte bei der Skala Angst enthalten. Das Cluster \textit{ängstlich} beinhaltet Probanden mit hohen Werten bei der Skala Angst und mittlere Werte bei den Skalen Nähe und Vertrauen. Im dritten Cluster \textit{vermeidend} befinden sich Probanden, die auf allen drei Skalen Nähe, Vertrauen und Angst tiefe Werte aufweisen.
 
+Für die Beantwortung der Fragestellung genügt die Einteilung in sichere und unsichere Probanden. Demzufolge müssen die Probanden anhand Cluster \textit{sicher} aufgeteilt werden. 
+Für die Clusterbildung werden alle drei Skalen in die zwei Bereiche \textit{hohe Werte} = 2 und \textit{tiefe Werte} = 1 unterteilt. Dies geschieht mit den entsprechenden Trennwert (Cutoff), der sich aus dem Mittelwerten ($M$) und der Standardabweichung ($SD$) der einzelnen Skalen bildet (siehe Formel \ref{eq:AASCutoffNähe}, \ref{eq:AASCutoffVertrauen} und \ref{eq:AASCutoffAngst}).
+
+%Formel
+\begin{equation}\label{eq:AASCutoffNähe}
+    AAS_{\text{\textit{Cutoff~N{\"a}he}}}=M_{\text{\textit{N{\"a}he}}} - SD_{\text{\textit{N{\"a}he}}}
+\end{equation}
+\begin{equation}\label{eq:AASCutoffVertrauen}
+    AAS_{Cutoff~Vertrauen}=M_{Vertrauen} - SD_{Vertrauen}
+\end{equation}
+\begin{equation}\label{eq:AASCutoffAngst}
+    AAS_{Cutoff~Angst}=M_{Angst} + SD_{Angst}
+\end{equation}
+
+Anschliessend werden die Skalen anhand des berechneten Cutoff-Werts aufgeteilt und gemäss den Konventionen von Cluster \textit{sicher} kodiert, d.h. in sicher und unsicher gebundene Probanden aufgeteilt.
+
+%Formel
+\begin{equation}\label{eq:AASSicherVsUnsicher}
+    AAS_{UnsVsSic}=( AAS_{\text{\textit{N{\"a}he}}} > 1) ~AND~ (AAS_{Vertrauen} > 1) ~AND~ (AAS_{Angst} < 2)
+\end{equation}
 
 \subsubsection{Stress: Perceived Stress Questionnaire (PSQ)}\label{sec:PSQ}
 Für die Erfassung der aktuellen subjektiv erlebten Belastung, wurde der \textit{Perceived Stress Questionnaire (PSQ)} von \citeA{Levenstein1993} in der deutschen Übersetzung von \citeA{Fliege2001} verwendet.
 \citeA{Levenstein1993} kreierte für den anglo-amerikanischen und italienischen Sprachraum ein Instrument, mit dem das Ausmass der subjektiv wahrgenommenen und erlebten aktuellen Belastung erfasst werden soll. Also das Ausmass aktuell wahrgenommener Belastungsfaktoren und das Erleben der eigenen Belastetheit auf der kognitiven und emotionalen Ebene \cite{Fliege2001}. Der Begriff Belastetheit soll verdeutlichen, dass es sich nicht um die Quelle der Belastung, sondern die Reaktion darauf gemeint ist. Die inhaltlichen Kriterien des Fragebogens sind (vgl. ebd.): (1) Stress wird als subjektives Belastungserleben erfasst. Damit wird gemeint, dass sich die Itemformulierung so weit wie möglich an der Perspektive der Wahrnehmung und Bewerung durch die Person orientiert. (2) Belastungsfaktoren und subjektive Belastetheit sollen als übergeordnete Klassen erfasst werden. Dies wird durch eine Vermeiden von Person- und situationsspezifische Formulierungen erreicht (z.B. keine eindeutig berufsbezogene Items). (3) Es wird lediglich das Belastungserleben und nicht der konkrete Umgang mit der Belastung erfragt. Dadurch soll sich der Test von der Erfassung von Bewältigungsbemühungen abgrenzen. Das Belastungserleben wird unabhängig von der Stelle erfasst, an der sich eine Person in einem möglichen Bewältingungsprozess befindet. (4) Es wird die Selbsteinschätzung der Person erhoben und somit nur der bewusste Anteil des Belastungserlebens.
 
-Die Autoren \citeA{Levenstein1993} schlagen vor, das Instrument für Untersuchungen von Zusammenhängen zwischen Stresserleben und Krankheitsentwicklung zu verwenden. Auch wenn in dieser Arbeit weder vom Medienverhalten noch vom subjektiven Wohlbefinden als Krankheit gesprochen werden kann, so sollen die Vorzüge dieses Instruments bezüglich der ökonomisch Durchführbarkeit, die Eignung zur Erfassung möglichst verschiedener Lebenskontexten von Erwachsenen und die Fokussierung auf das gegenwärtige Erleben hervorgehoben werden \cite{Fliege2001}. Bezüglich der empirischen Prüfung und Gütekriterien dieses Testinstruments kann gemäss \citeA{Naescher2009} von einer Auswertungsobjektivität, einer mittleren bis hohen Realiabilität und einer soliden Valildierung ausgegangen werden. Der Perceived Stress Questionnaire \cite{Fliege2001} ist für alle Erwachsenen und für verschiedene Lebenssituationen geeignet. Die deutsche Stichprobe, auf die sich die Werte beziehen, wurde an Probanden zwischen 17 und 79 Jahren erhoben. Der Fragebogen kann gemäss \citeA{Naescher2009} zur Diagnostik des subjektiven Belastungserlebens bei Erwachsenen zweifellos empfohlen werden.
+Die Autoren \citeA{Levenstein1993} schlagen vor, das Instrument für Untersuchungen von Zusammenhängen zwischen Stresserleben und Krankheitsentwicklung zu verwenden. Auch wenn in dieser Arbeit weder vom Medienverhalten noch vom subjektiven Wohlbefinden als Krankheit gesprochen werden kann, so sollen die Vorzüge dieses Instruments bezüglich der ökonomisch Durchführbarkeit, die Eignung zur Erfassung möglichst verschiedener Lebenskontexten von Erwachsenen und die Fokussierung auf das gegenwärtige Erleben hervorgehoben werden \cite{Fliege2001}. Bezüglich der empirischen Prüfung und Gütekriterien dieses Testinstruments kann gemäss \citeA{Naescher2009} von einer Auswertungsobjektivität, einer mittleren bis hohen Realiabilität und einer soliden Valildierung ausgegangen werden. 
+Für die Reliabilitätsprüfung wurden sowohl die innere Konsistenz als auch die Split-half-Reliabilität für die unterschiedlichen Stichproben berechnet. Die Ergebnisse befanden sich für alle Skalen im oberen Bereich. Die Werte für Cronbachs Alpha lagen gemäss \cite{Fliege2001} der Gesamtstichprobe bei $\alpha$ = .86 (Faktor I Sorgen), .84 (Faktor II: Anspannung), .85 (Faktor III: Freude), .80 (Faktor IV: Anforderungen) und bezogen auf alle vier Skalen bei .85. Bezüglich der Split-half-Reliabilität ergaben sich ähnliche Werte, weswegen von einer mittleren bis hohen Reliabilität ausgegangen werden kann \cite{Fliege2001}.
+
+Der Perceived Stress Questionnaire \cite{Fliege2001} ist für alle Erwachsenen und für verschiedene Lebenssituationen geeignet. Die deutsche Stichprobe, auf die sich die Werte beziehen, wurde an Probanden zwischen 17 und 79 Jahren erhoben. Der Fragebogen kann gemäss \citeA{Naescher2009} zur Diagnostik des subjektiven Belastungserlebens bei Erwachsenen zweifellos empfohlen werden.
 
 Durch die Validierung und Übersetzung des originalen Fragebogens ins Deutsche, wurden die ursprünglich 30 Items, basierend auf der durchgeführten exploratorischen Faktorenanalyse, auf 20 reduziert. Dadurch entstand die in dieser Arbeit verwendete Kurzversion dieses Fragebogens. Das Verfahren ist im \enquote{Elektronischen Testarchiv} des ZPID enthalten kann für nichtkommerzielle Forschungs- und Unterrichtszwecke kostenlos eingesetzt werden \cite{ZPID}. Ebenso konnten die ursprünglich siebenfaktorielle Zuordnung der Items nicht beibehalten werden. Folgende vier Skalen blieben dabei übrig: (1) Sorgen, (2) Anspannung, (3) Freude und (4) Anforderungen. Diese Veränderungen sind nachvollziehbar und bei \citeA{Fliege2001} ausführlich dokumentiert. Die Einschätzung erfolgt über eine viertstufige Likertskale, die von 1 für \textit{fast nie}, über 2 für \textit{manchmal}, 3 für \textit{häufig} bis zu 4 für \textit{meistens} reicht. Bei den Items handelt es sich um Feststellungen, die von der Testperson beurteilt werden sollen (siehe dazu auch Anhang \ref{app:PSQ}. 
 
@@ -110,8 +133,8 @@ In den Gesamtscore fliessen die oben berechneten Skalen ein und ergeben das allg
 \subsubsection{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}\label{sec:SWB}
 Die Erfassung des subjektiven Wohlbefindens erfolgte anhand dem von \citeA{Lyubomirsky1999} entwickelten \textit{Subjective Happiness Scale (SHS)}, in der deutschen Übersetzung und Überprüfung von \citeA{Swami2009}. Der SHS wurde für die Erfassung  eines allgemeinen subjektiven Wohlbefindens mittels Selbtseinschätzungsfragebogen entwickelt. Ein Wohlbefinden, dass in seiner globalen und grundsätzlichen Ausprägung, also ob es sich um einen glücklichen oder unglücklichen Menschen handelt, erfasst wird  \cite[S.~139ff]{Lyubomirsky1999}. Die Skala enthält insgesamt vier Items. Zwei davon erfassen das eigene Selbstbild, basierend auf einer absoluten Einschätzung des eigenen Wohlbefindens und einer Einschätzung verglichen mit dem eigenen sozialen Umfeld. Bei den weiteren beiden Items wird die befragte Person angehalten, sich bezüglich einer individuellen Beschreibungen glücklicher und unglücklicher Menschen einzuschätzen. Das Antwortformat der vier Items basiert auf einer sieben Punkte Likertskala (z.B.: 1 für \textit{Kein glücklicher Mensch} bis 7 \textit{Sehr glücklicher Mensch}). 
 
-\citeA{Lyubomirsky1999} weisen darauf hin, dass der SHS sich für die Erfassung des subjektiven Wohlbefindens besser eignet als andere vergleichbare Instrumente (z.B.: \textit{Affect Balance Scale} oder \textit{the Satisfaction With Life Scale}), da der Fragebogen eine globale subjektive Einschätzung bezügliche Wohlbefinden vornimmt, im Gegensatz zur Erfassung von eigentlichen Glückszuständen, die einer bestimmte Zeitspanne zuzuordnen sind (z.B.: affektive und kognitive Zustände). Der Fragebogen wurde in 14 Studien mit einem Total von 2,732 Teilnehmern validiert. Die Daten wurden innerhalb der vereinigten Staaten anhand von Studenten zweier Universitäten und einer Mittelschule, von Erwachsenen innerhalb zweier Städten in Kalifornien   erhoben. Zudem wurden Teilnehmer aus Moswkau, Russland beigezogen. Demzufolge soll der SHS eine hohe interne Konsistenz aufweisen, welche über alle Stichproben stabil blieben. Die Test-Retest-Korrelation und die Korrelation zwischen Eigen- und Fremdeinschätzung deuten auf eine gute bis sehr gute Realiabilität hin. 
-Zudem deute die Konstruktvalidität darauf hin, dass der Fragebogen auch wirklich das Konstrukt subjektives Wohlbefinden misst (vgl. ebd.). \citeA{Swami2009} konnten in ihrer Studie nachweisen, dass es sich bei der deutschen Übersetzung um eine unidimensionale Struktur, mit einer hohen internen Konsitenz handelt. Diese Übersetzung korrelierte hoch mit anderen Messinstrumenten, welche das subjektive Wohlbefinden erfassen. Demzufolge habe der neue Fragebogen eine gute Konvergenzvalidität. Hingegen konnten die Forscher keine Aussage über die Test-Retest-Reliabilität machen, noch nahmen sie eine Validierungsprüfung vor, da dies nicht zum Gegenstand ihrer Überprüfung zählte (vgl. ebd.).
+\citeA{Lyubomirsky1999} weisen darauf hin, dass der SHS sich für die Erfassung des subjektiven Wohlbefindens besser eignet als andere vergleichbare Instrumente (z.B.: \textit{Affect Balance Scale} oder \textit{the Satisfaction With Life Scale}), da der Fragebogen eine globale subjektive Einschätzung bezügliche Wohlbefinden vornimmt, im Gegensatz zur Erfassung von eigentlichen Glückszuständen, die einer bestimmte Zeitspanne zuzuordnen sind (z.B.: affektive und kognitive Zustände). Der Fragebogen wurde in 14 Studien mit einem Total von 2,732 Teilnehmern validiert. Die Daten wurden innerhalb der vereinigten Staaten anhand von Studenten zweier Universitäten und einer Mittelschule, von Erwachsenen innerhalb zweier Städten in Kalifornien   erhoben. Zudem wurden Teilnehmer aus Moswkau, Russland beigezogen. Demzufolge soll der SHS eine hohe interne Konsistenz aufweisen, welche über alle Stichproben stabil blieben. Die Test-Retest-Korrelation und die Korrelation zwischen Eigen- und Fremdeinschätzung deuten auf eine gute bis sehr gute Realiabilität hin.  
+Zudem deute die Konstruktvalidität darauf hin, dass der Fragebogen auch wirklich das Konstrukt subjektives Wohlbefinden misst (vgl. ebd.). \citeA{Swami2009} konnten in ihrer Studie nachweisen, dass es sich bei der deutschen Übersetzung um eine unidimensionale Struktur, mit einer hohen internen Konsistenz handelt. Das Cronbach $\alpha$ für die deutsche Version belief sich auf .82. Diese Übersetzung korrelierte hoch mit anderen Messinstrumenten, welche das subjektive Wohlbefinden erfassen. Demzufolge habe der neue Fragebogen eine gute Konvergenzvalidität. Hingegen konnten die Forscher keine Aussage über die Test-Retest-Reliabilität machen, noch nahmen sie eine Validierungsprüfung vor, da dies nicht zum Gegenstand ihrer Überprüfung zählte (vgl. ebd.).
 
 Die Operationalisierung erfolgt anhand der Mittelwertsbildung der vier Items \cite{Lyubomirsky1999} und ergibt einen SHS-Index (siehe \titleref{eq:SHS}). Die mögliche Ausprägung dieses Index reicht von 1.0 bis 7.0. Eine hohe Ausprägung steht für ein hohe subjektive Zufriedenheit.
 
