--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -104,8 +104,6 @@ In der letzten Frage wurden von den Teilnehmern die drei Medien erhoben, auf die
 \subsubsection{Bindung anhand AAS}
 Die Skalenauswertung des Adult Attachment Scale (AAS) liefert die in Tabelle \ref{table:AASDeskriptiv} dargestellten Ergebnisse. Dabei wurden die transformierten Skalen mit einem Werteberich von 0 bis 100 verwendet (siehe dazu die Formel \ref{eq:AASIndexTrans} in Kapitel \titleref{sec:AAS}). Der Mittelwert $M$ der Skala $AAS_{\textnormal{Nähe}}$ beträgt 78.46 ($SD$=15.98). Der Mittelwert $M$ der Skala $AAS_{Vertrauen}$ beträgt 80.18 ($SD$=16.98) und der Mittelwert  $M$ der Skala $AAS_{Angst}$ beträgt 20.28 ($SD$=17.43). Die entsprechenden Werte der original Skalen sind in Tabelle \ref{table:AppAASDeskriptiv} in Anhang \ref{app:TablesAas} zu finden.
 
-\textit{TBD: Klassifizierung in sicher vs. unsicher}
-
 %Table
 \begin{table}%[htbp]
 \begin{tabular}{m{7em} m{3em}  m{3em}  m{5em} m{3em}} 
@@ -122,6 +120,12 @@ Die Skalenauswertung des Adult Attachment Scale (AAS) liefert die in Tabelle \re
 \caption{Skalenwerte der Adult Attachment Scale - AAS}
 \label{table:AASDeskriptiv}
 \end{table}
+
+Für die Beantwortung der Fragestellung wurde anhand der Skalen eine Aufteilung der Stichprobe in sicher und unsicher gebundene Personen vorgenommen. Wie bereits in Kapitel \titleref{sec:AAS} beschrieben, kann eine Aufteilung in das Cluster \enquote{sicher} vorgenommen werden \cite{Schuetzmann2004}. Gemäss dieser Aufteilung lassen sich 69.7\% der Probanden in sicher und 30.3\% in unsicher gebundene Personen zuordnen. 
+
+\subsubsection{Stress anhand PSQ}
+
+
 
 % ---------------------------------------
 \subsection{Hypothesentest} \label{sec:Hypothesentest}
