--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -1,3 +1,9 @@
+\textit{TBD Discussed:}
+\begin{itemize}
+    \item Bezüglich Aufteilung der Probanden in sicher vs unsicher: Dies entspricht in etwa den Werten der Metanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden gefunden hatte.
+\end{itemize}
+
+
 % ---------------------------------------
 \subsection{Beantwortung der Fragestellung} \label{sec:BeantwortungFragestellung}
 
