--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -102,29 +102,15 @@ Neben der Mediennutzung und der Medientätigkeit wurde die Anzahl Geräte im Hau
 In der letzten Frage wurden von den Teilnehmern die drei Medien erhoben, auf die sie während der Betreuung ihres Kindes am wenigsten verzichten konnten. 85.3\% gaben an, nicht auf das Smartphone verzichten zu können, gefolgt vom Radio (Stereonalage, CD-Player) von 33.9\% und 25.2\% Foto- und Videokamera (siehe Tabelle \ref{fig:AppMedienverzicht} im Anhang \ref{app:TablesMediennutzung}). Weiter gaben die Teilnehmer an, dass 11.9\% von ihnen nicht auf den Fernseher, 9.6\% nicht auf das Abo einer Tageszeitung oder Zeitschrift, 8.3\% nicht auf den Computer (Laptop oder Desktop), 2.8\% nicht auf den MP3-Player, 2.3\% nicht auf das Tablet und .9\% nicht auf die Spielkonsole verzichten können.
 
 \subsubsection{Bindung anhand AAS}
-Die Skalenauswertung des Adult Attachment Scale (AAS) liefert die in Tabelle \ref{table:AASDeskriptiv} dargestellten Ergebnisse. Dabei wurden die transformierten Skalen mit einem Werteberich von 0 bis 100 verwendet (siehe dazu die Formel \ref{eq:AASIndexTrans} in Kapitel \titleref{sec:AAS}). Der Mittelwert $M$ der Skala $AAS_{\textnormal{Nähe}}$ beträgt 78.46 ($SD$=15.98). Der Mittelwert $M$ der Skala $AAS_{Vertrauen}$ beträgt 80.18 ($SD$=16.98) und der Mittelwert  $M$ der Skala $AAS_{Angst}$ beträgt 20.28 ($SD$=17.43). Die entsprechenden Werte der original Skalen sind in Tabelle \ref{table:AppAASDeskriptiv} in Anhang \ref{app:TablesAas} zu finden.
-
-%Table
-\begin{table}%[htbp]
-\begin{tabular}{m{7em} m{3em}  m{3em}  m{5em} m{3em}} 
-  \hline
-  & $M$ & $SD$ & Min - Max & Schiefe\\
-  \hline
-  $AAS_{\textit{\textnormal{NäheTrans}}}$ & 78.46 & 15.98 & 25 - 100 & -.59\\
-  $AAS_{VertrauenTrans}$ & 80.18 & 16.98 & 16.67 - 100 & -1.17\\
-  $AAS_{AngstTrans}$ & 20.28 & 17.43 & -5 - 75 & .91 \\
-  \hline
-  \multicolumn{5}{l}{\textit{Anmerkung. $N$=217, Wertebereich Skala 0 bis 100.}}\\
-  &&&&\\
-\end{tabular}
-\caption{Skalenwerte der Adult Attachment Scale - AAS}
-\label{table:AASDeskriptiv}
-\end{table}
+Die Skalenauswertung des Adult Attachment Scale (AAS) liefert folgende Werte (siehe Tabelle \ref{table:AppAASDeskriptivTrans} in Anhang \ref{app:TablesAas}). Dabei wurden die transformierten Skalen mit einem Wertebereich von 0 bis 100 verwendet (siehe dazu die Formel \ref{eq:AASIndexTrans} in Kapitel \titleref{sec:AAS}). Der Mittelwert $M$ der Skala $AAS_{\textnormal{Nähe}}$ beträgt 78.46 ($SD$=15.98). Der Mittelwert $M$ der Skala $AAS_{Vertrauen}$ beträgt 80.18 ($SD$=16.98) und der Mittelwert  $M$ der Skala $AAS_{Angst}$ beträgt 20.28 ($SD$=17.43). Die entsprechenden Werte der original Skalen sind in Tabelle \ref{table:AppAASDeskriptiv} in Anhang \ref{app:TablesAas} zu finden.
 
 Für die Beantwortung der Fragestellung wurde anhand der Skalen eine Aufteilung der Stichprobe in sicher und unsicher gebundene Personen vorgenommen. Wie bereits in Kapitel \titleref{sec:AAS} beschrieben, kann eine Aufteilung in das Cluster \enquote{sicher} vorgenommen werden \cite{Schuetzmann2004}. Gemäss dieser Aufteilung lassen sich 69.7\% der Probanden in sicher und 30.3\% in unsicher gebundene Personen zuordnen. 
 
 \subsubsection{Stress anhand PSQ}
+Die Skalenauswertung des Perceived Stress Questionnaire (PSQ) liefert folgende Werte (siehe auch Tabelle \ref{table:AppPSQDeskriptiv} in Anhang \ref{app:TablesPsq}). Der Mittelwert $M$ der Skala $PSQ_{Sorgen}$ beträgt 24.28 ($SD$=17.69). Der Mittelwert $M$ der Skala $PSQ_{Anspannung}$ beträgt 42.14 ($SD$=21.96). Der Mittelwert $M$ der Skala $PSQ_{Freude}$ beträgt 65.26 ($SD$=19.08). Der Mittelwert $M$ der Skala $PSQ_{Anforderung}$ beträgt 46.97 ($SD$=19.54) und der Gesamtmittelwert $M$ der Skala $PSQ_{Gesamtscore}$ beträgt 37.03 ($SD$=17.11).
 
+
+\subsubsection{Wohlbefinden anhand SHS}
 
 
 % ---------------------------------------
