--- a/content/Anhang/TabellenAAS.tex
+++ b/content/Anhang/TabellenAAS.tex
@@ -1,3 +1,5 @@
+Die folgenden Tabellen stellen die Skalenwerte der Adult Attachement Scale (AAS) dar.
+
 %Table
 \begin{table}%[htbp]
 \begin{tabular}{m{6em} m{3em}  m{3em}  m{5em} m{3em}} 
@@ -8,9 +10,26 @@
   $AAS_{Vertrauen}$ & 4.21 & .68 & 1.67 - 5 & -1.17\\
   $AAS_{Angst}$ & 1.81 & .70 & .80 - 4 & .91 \\
   \hline
-  \multicolumn{5}{l}{\textit{Anmerkung.} $N$=217, Wertebereich Skala 1 bis 5}\\
+  \multicolumn{5}{l}{\textit{Anmerkung.} $N$=217, Skala Wertebereich 1 bis 5}\\
   &&&&\\
 \end{tabular}
 \caption{Skalenwerte der Adult Attachment Scale - AAS}
 \label{table:AppAASDeskriptiv}
+\end{table}
+
+%Table
+\begin{table}%[htbp]
+\begin{tabular}{m{7em} m{3em}  m{3em}  m{5em} m{3em}} 
+  \hline
+  & $M$ & $SD$ & Min - Max & Schiefe\\
+  \hline
+  $AAS_{\textit{\textnormal{NäheTrans}}}$ & 78.46 & 15.98 & 25 - 100 & -.59\\
+  $AAS_{VertrauenTrans}$ & 80.18 & 16.98 & 16.67 - 100 & -1.17\\
+  $AAS_{AngstTrans}$ & 20.28 & 17.43 & -5 - 75 & .91 \\
+  \hline
+  \multicolumn{5}{l}{\textit{Anmerkung. $N$=217, Wertebereich Skala 0 bis 100.}}\\
+  &&&&\\
+\end{tabular}
+\caption{Transformierte Skalenwerte der Adult Attachment Scale - AAS}
+\label{table:AppAASDeskriptivTrans}
 \end{table}
