--- a/main.tex
+++ b/main.tex
@@ -102,6 +102,11 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \input{content/Anhang/TabellenAAS.tex}
 \newpage
 
+% Tabellen PSQ
+\section{Tabellen Stress}\label{app:TablesPsq}
+\input{content/Anhang/TabellenPSQ.tex}
+\newpage
+
 % AAS Fragebogen
 \section{Die Adult Attachment Scale (AAS)}\label{app:AAS}
 \input{content/Anhang/AAS.tex}
