sec:Methode - Stichprobenumfangsplanung hinzugefügt

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -89,18 +89,24 @@ Siehe auch \citeA{Swami2009} für theoretischen Überblick. Und \citeA{Lyubomirs
 
 
 % ---------------------------------------
-\subsection{TBD: Fragestellung und Hypothesen} \label{sec:Fragestellung}
-Die Studie möchte einen möglichen Effekt zwischen dem Bindungsstil der Eltern und deren Medienverhalten während der Betreuung ihrer Kinder untersuchen. Um den Bindungsstil als ausschlaggebende Variable auf das elterliche Medienverhalten zu isolieren, soll der Stress der Eltern als moderierende Variable in die Untesuchung einfliessen.
+\subsection{Fragestellung und Hypothesen} \label{sec:Fragestellung}
+Die Studie möchte einen möglichen Effekt zwischen dem Bindungsstil der Eltern und deren Medienverhalten während der Betreuung ihrer Kinder untersuchen. Um den Bindungsstil als ausschlaggebende Variable auf das elterliche Medienverhalten zu isolieren, soll der Stress der Eltern als moderierende Variable in die Untersuchung einfliessen.
 
 Welche Auswirkungen das Medienverhalten auf die Eltern haben, soll mittels subjektiven Wohlbefinden  untersucht werden. 
 
 Basierend auf dem oben beschriebenen theoretischen Hintergrund und anhand der aufgezeigten Forschungslücken erschliesst sich die im Folgenden aufgelistete Fragestellung. Basierend auf der Fragestellung wurden die Hypothesen erstellt.
-\subsubsection{Fragestellung} 
+
+\textbf{Fragestellung:}
 Welchen Effekt hat der Bindungsstil und das aktuelle Stressempfinden der Eltern auf das im Beisein der Kinder praktizierte Medienverhalten? Kann zwischen diesem elterlichen Verhalten und deren subjektiven Wohlbefinden ein Zusammenhang gefunden werden?
-\subsubsection{Hypothese 1}
+
+\textbf{Hypothese 1:}
 Eltern mit einem sicheren Bindungsstil weisen eine geringere Mediennutzung im Beisein ihrer Kinder auf als Eltern, die einen unsicheren Bindungsstil aufweisen.
-\subsubsection{Hypothese 2}
+
+\textbf{Hypothese 2:} Eltern mit einem unsicheren Bindungsstil benutzen das Smartphone im Beisein ihrer Kinder öfters, als sicher gebundene Eltern.
+
+\textbf{Hypothese 3:}
 Eltern, die ein hohes Ausmass an Stress empfinden, nutzen Medien im Beisein ihrer Kinder häufiger als Eltern, die ein niedriges Ausmass an Stress aufweisen.
-\subsubsection{Hypothese 3}
+
+\textbf{Hypothese 4:}
 Eltern mit einem erhöhten Medienverhalten im Beisein ihrer Kinder weisen ein geringeres subjektives Wohlbefinden auf als Eltern, die ein geringeres Medienverhalten im Beisein ihrer Kinder aufweisen.
 
