--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -16,9 +16,15 @@ Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 
 
 % ---------------------------------------
 \subsection{Design \& Operationalisiserung} \label{sec:Design}
-Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Aus ökonomischer Sicht und bezüglich einem hohen Mass an Standardisierung \cite[S.~86ff]{sedlmeier2008} wurde eine schriftliche Befragung via Internet-Fragebogen durchgeführt. Dadurch konnten die Befragten leichter kontaktiert und ein höherer Grad an Anonymität erreicht werden. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte. Eine Übersetzung der Umfrage in weiter Sprachen hätte den Umfang dieser Arbeit gesprengt, da die einzelnen Fragebögen durch eine der wissenschaft genügenden Hin- und Rückübersetzung durch Personen aus den beiden Muttersprächen zu erfolgen gehabt hätte \cite{Pfetsch2016}.
+Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Aus ökonomischer Sicht und bezüglich einem hohen Mass an Standardisierung \cite[S.~86ff]{sedlmeier2008} wurde eine schriftliche Befragung via Internet-Fragebogen durchgeführt. Dadurch konnten die Befragten leichter kontaktiert und ein höherer Grad an Anonymität erreicht werden. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte. Eine Übersetzung der Umfrage in weiter Sprachen hätte den Umfang dieser Arbeit gesprengt, da die einzelnen Fragebögen durch eine der wissenschaft genügenden Hin- und Rückübersetzung durch Personen aus den beiden Muttersprachen zu erfolgen gehabt hätte \cite{Pfetsch2016}.
 
-Im Folgenden werden die einzelnen für die Beantwortung der Fragestellung notwendiger Konstrukte näher erläutert und operationalisiert.
+Im Folgenden werden die Stichprobenumfangsplanung und die einzelnen für die Beantwortung der Fragestellung notwendiger Konstrukte näher erläutert und operationalisiert.
+
+\subsubsection{Stichprobenumfangsplanung}\label{sec:Stichprobenumfangsplanung}
+Gemäss Fragestellung wird eine Stichprobengrösse von insgesamt 210 Personen angestrebt. Diese Stichprobengrösse wurde mittels G*Power \cite{Faul2009} für eine einfaktorielle Varianzanalyse gemäss \citeA{Rasch2014} ermittelt (F-Test - ANOVA: Fixed effects, omnibus, one-way).
+Für die Stichprobenumfangsplanung wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant festgelegt: $f = 0.25$ resp. $\Omega^2 = 0.06$. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Es werden zwei Gruppen für den Faktor Bindung benötigt (sicher und unsicher).
+
+Für die Beantwortung des Zusammenhangs zwischen Medienverhalten und subjektiven Wohlbefinden wird eine lineare Regressionsanalyse durchgeführt. Das Kriterium bildet das subjektive Wohlbefinden und der Prädiktor das Medienverhalten. Die Stichprobengrösse für die Beantwortung dieser Fragestellung wurde wieder mittels G*Power für eine Korrelation berechnet. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $f=.3$ erwartet, was einem Korrealtionskoeffizient $r$ nach Bravais-Pearson von $|r|=.3$ entspricht. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Daraus ergibt sich eine Stichprobengrösse von 138 Probanden.
 
 \subsubsection{Soziodemografische Daten}\label{sec:SoziodemografischeDaten}
 Bei den soziodemografischen Daten wurden folgende Parameter erfasst: Geschlecht, Jahrgang (Alter), Alter des Kindes in Monaten, Geschlecht des Kindes, brutto Familieneinkommen gemäss \citeA{NZZ2014}, Bildungsabschluss gemäss \citeA{Bfsnd}, Anzahl Personen im gleichen Haushalt, Lebensform, Anzahl Tage, an denen das Kind fremdbetreut ist und der durchschnittliche Betreuungsaufwand pro Woche.
