--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -111,7 +111,7 @@ Die Skalenauswertung des Perceived Stress Questionnaire (PSQ) liefert folgende W
 
 
 \subsubsection{Wohlbefinden anhand SHS}
-
+Der Indexwert der Subjective Happiness Scale (SHS) $SHS~I$ beläuft sich in dieser Stichprobe auf $M$ 5.53 ($SD$=1.01). Das $Minimum$ beläuft sich auf 2.25 und das $Maximum$ auf 7.0. Die $Schiefe$ beträgt -.77.
 
 % ---------------------------------------
 \subsection{Hypothesentest} \label{sec:Hypothesentest}
